# Reconocimiento-facial-usando-Eigenfaces

./: README.md
DevC++/: Eigenfaces.dev  Makefile.win  main.cpp  prueba.csv  reader.cpp  reader.h
Eigenfaces/: CMakeLists.txt  Eigenv.cpp  Eigenv.h  face_tests.csv  main.cpp  mat_face.csv  pca.cpp  pca.h  reader.cpp  reader.h
Eigenfaces/faces/: faces.cbp  faces.depend  faces.layout
Literature/: Tiwari.ppt
